# rust-flutter-starter

./: .gitignore  Cargo.toml  Makefile.toml  analysis_options.yaml  pubspec.yaml
android/src/main/kotlin/org/mylib/mylib/: MylibPlugin.kt
app/: pubspec.yaml
app/lib/: main.dart
app/linux/: CMakeLists.txt  my_application.cc
app/test/: widget_test.dart
lib/: bindings.dart  lib.dart  mylib.dart
lib/types/: users.dart
linux/: CMakeLists.txt  mylib_plugin.cc
linux/include/mylib/: mylib_plugin.h
rust/: cbindgen.toml  makefile
rust/src/: http.rs  lib.rs
rust/src/db/: ffi.rs  init.rs  mod.rs  users.rs
rust/src/http/: http.rs
test/: ffi_test.dart
