[package]
name = "example"
version = "0.1.0"
authors = ["Brick Pop <itsbrickpop@gmail.com>"]
edition = "2018"

[lib]
name = "example"
path = "rust/src/lib.rs"
crate-type = ["staticlib", "cdylib"]


[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
